Fixed another typo

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ ylabel('roll belt'); xlabel('index'); title('Colored by 6 users')
 
 <p>To accelerate the computation, I will enable parallel option supported on <a href="http://www.mathworks.com/products/parallel-computing/">Parallel Computing Toolbox</a>. You can comment out unnecessary code if you don't use it.</p>
 
-<p>Once the model is built, you will see the <a href="http://www.mathworks.com/help/stats/confusionmat.html">confusion matrix</a> that compares the actual class labels to predicted class labels. If everything line up on a diagonal line, then you got 100% accuracy. Off-diagonal numbers are misclassification errors.</p>
+<p>Once the model is built, you will see the <a href="http://www.mathworks.com/help/stats/confusionmat.html">confusion matrix</a> that compares the actual class labels to predicted class labels. If everything lines up on a diagonal line, then you got 100% accuracy. Off-diagonal numbers are misclassification errors.</p>
 
 <p>The model has a very high prediction accuracy even though we saw earlier that our dataset was not as problem free as we would like.</p>
 
